[package]
name = "kvs"
version = "0.1.0"
authors = ["darknight <illuminating.me@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kvs"
test = false
doctest = false

[[bin]]
#name = "kvs"
name = "project_1"
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false

[dependencies]
clap = "2.33.0"
serde = "1.0.*"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

