[package]
name = "kvs"
version = "0.1.0"
authors = ["darknight <illuminating.me@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kvs"
test = false
doctest = false
bench = false

[[bin]]
#name = "kvs"
name = "project_1"
test = false
doctest = false
bench = false

[[bin]]
name = "project_2"
test = false
doctest = false
bench = false

[[bin]]
name = "kvs-client"
test = false
doctest = false
bench = false

[[bin]]
name = "kvs-server"
test = false
doctest = false
bench = false

[[bin]]
name = "bench"
test = false
doctest = false
bench = false

[[bench]]
name = "benches"
harness = false

#[features]

[dependencies]
clap = "2.33.0"
serde = "1.0.*"
serde_json = "1.0"
slog = "2.5"
slog-term = "2.4.1"
sled = "0.24.1"
criterion = "0.2.11"
rand = "0.6.5"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
criterion = "0.2.11"
rand = "0.6.5"
crossbeam-utils = "0.6.5"